# baseball-savant-shohei-ohtani2022

./: LICENSE  README.md
notebook/: batting.ipynb  pitching.ipynb  pyproject.toml  requirements.txt
notebook/dataset/: 20220919_baseball-savant-shohei-ohtani-atbat.csv  20220919_baseball-savant-shohei-ohtani-pitch.csv  20221005_baseball-savant-shohei-ohtani-atbat.csv  20221005_baseball-savant-shohei-ohtani-pitch.csv
