[tool.poetry]
name = "notebook"
version = "0.1.0"
description = ""
authors = ["shinyorke <spirits.is.my.rader@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.4"
jupyterlab = "^3.4.7"
plotly = "^5.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
